added folder for audit models. i think this is supposed to be in the macros folder?? but it doesn't seem to work when i leave it there. i must still be doing something wrong...

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,3 +36,7 @@ models:
     # Applies to all files under models/example/
     core:
       materialized: table
+    legacy:
+      materialized: table
+    audit:
+      materialized: view
